<resources>
    <string name="app_name">two_degree</string>
    <string name="login">登录</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="two_degree_button">二度</string>
    <string name="information_button">消息</string>
    <string name="dynamic_button">动态</string>
    <string name="me_button">我</string>
    <string name="two_degree_text">这是二度列表</string>
    <string name="information_text">这是消息列表</string>
    <string name="dynamic_text">这是动态列表</string>
    <string name="me_text">这是我列表</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_two_degree">TwoDegree</string>
    <string name="name">名字</string>
    <string name="emotion">情感</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="title_activity_me">Me</string>
    <string name="title_activity_change_name">ChangeName</string>
    <string name="title_activity_change_emotion">ChangeEmotion</string>
    <string name="title_activity_change_age">ChangeAge</string>
    <string name="title_activity_change_sex">ChangeSex</string>
</resources>
